--- a/.gitignore
+++ b/.gitignore
@@ -1,4 +1,34 @@
+# Node.js
 node_modules/
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+
+# ビルド成果物
 dist/
+*.tsbuildinfo
+
+# 環境変数
 .env
+.env.local
+.env.*.local
+
+# ログ
+logs/
+*.log
+
+# OS
 .DS_Store
+Thumbs.db
+*.tmp
+.directory
+
+# エディタ
+.vscode/
+.idea/
+*.swp
+*.swo
+*~
+
+# Docker
+docker-compose.override.yml
