ラズパイ環境でも動作するように変更

--- a/.env.example
+++ b/.env.example
@@ -22,3 +22,12 @@ PORT=3000
 # Cloudflare Tunnelのトークン
 # 取得方法: https://one.dash.cloudflare.com/ でトンネルを作成
 CLOUDFLARE_TUNNEL_TOKEN=your_cloudflare_tunnel_token_here
+
+# ========================================
+# Docker Platform Configuration
+# ========================================
+# Docker Platform設定（自動検出: デフォルトはlinux/amd64）
+# PC/Mac (Intel/AMD): linux/amd64
+# Raspberry Pi: linux/arm64
+# 通常は変更不要（必要に応じて設定）
+DOCKER_PLATFORM=linux/amd64
