局ごとに宛先とロールの変更

--- a/.env.example
+++ b/.env.example
@@ -7,8 +7,16 @@ DISCORD_TOKEN=your_discord_bot_token_here
 # Webhook認証用のシークレットキー（任意の安全な文字列）
 BOT_NOTIFY_SECRET=your_secret_key_here
 
-# 通知を送信するDiscordチャンネルのID
+# 通知を送信するDiscordチャンネルのID（デフォルトチャンネル）
 NOTIFICATION_CHANNEL_ID=your_channel_id_here
+
+# 局名ごとのチャンネルID設定 (JSON形式)
+# 各局のチャンネルIDを設定してください
+DEPARTMENT_CHANNELS={"全局":"your_channel_id_here","役員":"your_channel_id_here","執行部":"your_channel_id_here","総務局":"your_channel_id_here","室内局":"your_channel_id_here","屋外局":"your_channel_id_here","装飾局":"your_channel_id_here","ステージ局":"your_channel_id_here","広報局":"your_channel_id_here","渉外局":"your_channel_id_here","IT局":"your_channel_id_here"}
+
+# 局名ごとのメンションロールID設定 (JSON形式)
+# 各局でメンションするロールIDを設定してください
+DEPARTMENT_ROLES={"全局":"your_role_id_here","役員":"your_role_id_here","執行部":"your_role_id_here","総務局":"your_role_id_here","室内局":"your_role_id_here","屋外局":"your_role_id_here","装飾局":"your_role_id_here","ステージ局":"your_role_id_here","広報局":"your_role_id_here","渉外局":"your_role_id_here","IT局":"your_role_id_here"}
 
 # ========================================
 # Server Configuration
