スラッシュコマンドの追加

--- a/.env.example
+++ b/.env.example
@@ -4,6 +4,15 @@
 # Discord Developer Portalで取得したボットトークン
 DISCORD_TOKEN=your_discord_bot_token_here
 
+# Discord Developer PortalのアプリケーションID（クライアントID）
+# スラッシュコマンドの登録に必要
+DISCORD_CLIENT_ID=your_client_id_here
+
+# テスト用のサーバーID（ギルドID）- 任意
+# 設定すると特定のサーバーのみにコマンドが即座に登録される（テスト推奨）
+# 本番環境では空欄にするとグローバルコマンドとして登録される
+DISCORD_GUILD_ID=your_guild_id_here
+
 # Webhook認証用のシークレットキー（任意の安全な文字列）
 BOT_NOTIFY_SECRET=your_secret_key_here
 
