--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "dev": "nodemon --exec ts-node src/index.ts",
     "build": "tsc",
     "start": "node dist/index.js",
-    "deploy-commands": "ts-node src/commands/deploy-commands.ts"
+    "deploy-commands": "ts-node src/commands/deploy-commands.ts",
+    "delete-commands": "ts-node src/commands/delete-commands.ts"
   },
   "keywords": [],
   "author": "",
