docker環境変数の追加

--- a/.env.example
+++ b/.env.example
@@ -33,6 +33,10 @@ DEPARTMENT_ROLES={"全局":"your_role_id_here","役員":"your_role_id_here","執
 # Expressサーバーのポート番号（デフォルト: 3000）
 PORT=3000
 
+# 月間予定取得用のURL
+# /monthlyコマンドで使用される外部APIのエンドポイント
+MONTHLY_URL=https://your-monthly-schedule-api-endpoint.com
+
 # ========================================
 # Cloudflare Tunnel Configuration
 # ========================================
